# WF65

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  get-started.md  nf_diag.txt  nf_diag3.txt  nf_diag4.txt  nf_diag5.txt
.cargo/: config.toml
.claude/skills/jasm-forth/: SKILL.md
bench/: DESIGN.md  README.md  manifest.json
bench/baseline/: README.md  arith-fold.json  bareop-compare.json  bareop-inline.json  hotvar.json  real-fib.json  real-mandel-iter.json  real-mixed.json  stack-shuffle.json  stackop-inline.json  tco-tail.json
bench/corpus/: arith-fold.f  bareop-compare.f  bareop-inline.f  hotvar.f  real-fib.f  real-mandel-iter.f  real-mixed.f  stack-shuffle.f  stackop-inline.f  tco-tail.f
crates/docpane/: Cargo.toml
crates/docpane/src/: layout.rs
crates/selkie/: Cargo.toml
demos/: gfx-canvas-mandelbrot.f  gfx-shapes.f  gfx-spiral.f  strings.f
docs/: ANS_GAP_ANALYSIS.md  MILESTONES.md  dict_header.md  dictionary_overlay.md  dsl_user_guide.md  forth-reference.md  forth_gc_needs.md  gc_design.md  ide-guide.md  index.md  memory-map.md  oop_design.md  strings_design.md  tracing_forth.md  vocabularies.md
docs/design/: jasm_forth_optimizer_critique.md  jasm_forth_optimizer_v1.md  jasm_forth_optimizer_v2.md  jasm_forth_optimizer_v2_critique.md  let-native-word.md
kernel/: arith.masm  compare.masm  compile.masm  execute.masm  float.masm  fmath.masm  gc.masm  igui.masm  io.masm  locals.masm  logic.masm  macros.masm  main.masm  memory.masm  number.masm  runtime_decls.masm  strings.masm
kernel/win32/: api-ms-win-core-memory-l1-1-6.masm  kernel32.masm  shell32.masm  winmm.masm
lib/: core.f  core.f.bak  tester.fs
release/wf64/: README.txt
release/wf64/demos/: bench-loop.f  factorial.f  fibonacci.f  gfx-canvas-mandelbrot-let.f  gfx-click.f  gfx-diag.f  gfx-julia.f  gfx-mandelbrot.f  oop-shapes.f  stack-tour.f
release/wf64/docs/: forth-tutorial.md  getting-started.md  keyboard-shortcuts.md
release/wf64/kernel/: compile.masm  dict.masm  facility.masm  float.masm  igui_gfx.masm  interp.masm  macros.masm  oop.masm  parse.masm  rstack.masm  stack.masm  strings_managed.masm
release/wf64/kernel/win32/: advapi32.masm  comctl32.masm  comdlg32.masm  gdi32.masm  ole32.masm  shlwapi.masm  user32.masm  ws2_32.masm
release/wf64/lib/: ans_core_tests.fs  core.f  oop.f
src/: lib.rs  main.rs  opt_metrics.rs  opt_timing.rs  runtime.rs  wf32_port.rs
src/gc/: heap.rs  layout.rs  mod.rs
src/igui/: batch.rs  channels.rs  child.rs  cp_exports.rs  crash_handler.rs  crash_view.rs  cursor.rs  d2d.rs  d3d.rs  doc_pane.rs  dwrite.rs  executor.rs  fconsole.rs  fedit.rs  font_metrics.rs  help_pane.rs  lisp_shims.rs  log_view.rs  menu.rs  mod.rs  registry.rs  renderer.rs  repl_pane.rs  replies.rs  rope_buffer.rs  stack_view.rs  system_colors.rs  text_view.rs  tools_menu.rs  window.rs
src/let_lang/: codegen.rs  mod.rs  parser.rs
src/newfactor/: factor_session.rs  mod.rs  transpiler.rs
tests/: gc_layout_integration.rs  harness.rs  optimizer_static_gate.rs
tests/data/direct/: abs.t  aligned.t  and.t  arshift.t  b_fetch.t  b_store.t  base_fetch.t  base_store.t  base_word.t  bounds.t  c_plus_place.t  c_plus_store.t  cell_minus.t  cell_plus.t  cells.t  cells_minus.t  cells_plus.t  char_plus.t  chars.t  cmove.t  cmove_to.t  compare.t  count.t  count_bits.t  d_equal.t  d_greater.t  d_less.t  d_minus.t  d_not_equal.t  d_plus.t  d_plus_store.t  d_two_slash.t  d_two_times.t  d_zero_equal.t  d_zero_less.t  dabs.t  digit.t  dnegate.t  du_greater.t  du_less.t  (+110 more)
tests/data/eval/: arithmetic_chain.in  arithmetic_chain.out  backslash_token_vs_comment.in  backslash_token_vs_comment.out  base_addr.in  base_addr.out  base_parse.in  base_parse.out  begin_until.in  begin_while_repeat.in  begin_while_repeat.out  code_near.in  code_near.out  divmod_via_slash_mod.in  divmod_via_slash_mod.out  do_loop.in  do_loop.out  float_literals.in  float_literals.out  hex_prefix_0x.in  hex_prefix_0x.out  if_then_else.in  if_then_else.out  locals_pipe.in  locals_pipe.out  locals_to.in  locals_to.out  oop_counter.in  oop_counter.out  oop_dnu.in  oop_dnu.out  oop_early.in  oop_early.out  oop_early_proof.in  oop_early_proof.out  oop_introspect.in  oop_introspect.out  oop_polymorphism.in  oop_polymorphism.out  oop_scope.in  (+13 more)
tmp/: fi_test.f  gfx-click-deps.f  gfx-click-validation.f  locals-probe.f  locals_debug.f  locals_repl_test.f  locals_test.f
tools/: build-release.ps1  wf64-ui.exe.manifest  wf64-ui.rc
